criado html e css de musicas

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>
         
         <div id="pastas">
-            <a href="/MÚSICAS.txt">LISTA DE MÚSICAS</a>
+            <a href="./musicas.html">LISTA DE MÚSICAS</a>
             <a href="/22032024 - SEXTA/">SEXTA-FEIRA - 22032024</a>
             <a href="/23032024 - SÁBADO/">SÁBADO - 23032024</a>
         </div>
