maravilhosa graça up

--- a/23032024 - SÁBADO/MARAVILHOSA GRAÇA.html
+++ b/23032024 - SÁBADO/MARAVILHOSA GRAÇA.html
@@ -19,11 +19,11 @@
 
             <strong>
                 MAPA
-                RESUMO (INTRO / PARTE 1 / REFRÃO / MEIA INTRO / PARTE 2 / REFRÃO / PONTE 3X / REFRÃO / INTRO FINAL / REFRÃO SEM BANDA)
+                RESUMO (INTRO 2x / PARTE 1 / REFRÃO / MEIA INTRO / PARTE 2 / REFRÃO / PONTE 3X / REFRÃO / INTRO 2X E FINAL / REFRÃO SEM BANDA)
             </strong>
             <br><br>
         
-            <strong>INTRO A - D - A - D <br></strong>
+            <strong>INTRO A - D (2x) <br></strong>
             <br>
 
 
@@ -100,7 +100,7 @@
                      F#m <br>
             Oh oh oh   Pra sempre eu canto <br>
             E                   A <br>
-               O que fizeste a mim <br>
+               O que fizeste a mim <br> (CAIR / PAUSA)
          <br>
          <br>
             <strong>Ponte 3X (CRESCER NA ULTIMA): <br></strong>
@@ -113,7 +113,6 @@
             Digno é o cordeiro de Deus <br>
             D <br>
             Digno é o cordeiro que a morte venceu <br>
-         <br>
          <br>
          <br>
             <strong>REFRÃO <br><br></strong>
@@ -134,7 +133,7 @@
             E                   A <br>
                O que fizeste a mim <br>
          <br>
-            <strong>INTRO FINAL <br></strong>
+            <strong>INTRO 2X E FINAL <br></strong>
          <br>
          <br>
             <strong>REFRÃO SEM BANDA <br><br></strong>
