--- a/musicas.html
+++ b/musicas.html
@@ -54,7 +54,7 @@
             <a href="./23032024 - SÁBADO/MARAVILHOSA GRAÇA.html">
                 <li>Maravilhosa Graça (Bethel) “A”</li>
             </a>
-            <a href="">
+            <a href="./23032024 - SÁBADO/NOSSO DEUS É PODEROSO.html">
                 <li>Nosso Deus é Poderoso (Hillsong) “A”</li>
             </a>
             <a href="">
