--- a/23032024 - SÁBADO/EMAÚS.html
+++ b/23032024 - SÁBADO/EMAÚS.html
@@ -1,159 +1,147 @@
-EMAÚS - MORADA (TOM - A)
+<!DOCTYPE html>
+<html lang="pt-br">
 
-[Intro] D  F#m  E  A/C#
-        D  F#m  E
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>EMAÚS</title>
+  <style>
+    body {
+      text-align: center;
+    }
+  </style>
+</head>
 
-[Primeira Parte]
+<body>
+  <h1>EMÁUS - MORADA (TOM - A)</h1>
+  <a href="../musicas.html">Voltar</a><br><br>
+  <code>
 
-       D                      A
-Quem é esse que vem, nos abraçando
-       D
-Quem é esse que vem
-             A             E
-Nos constrangendo com o olhar
-           D           E
-Ele é tão sábio ensina em amor
-           D               E
-Ele é tão manso cuida dos corações
+      <strong>
+        MAPA
+        RESUMO (INTRO / PARTE 1 LEVE / PARTE 1 NORMAL / PONTE / PRÉ REFRÃO / REFRÃO 2X / INTRO / PONTE / PRÉ REFRÃO 2X / REFRÃO 3X / PRÉ REFRÃO FINAL 3X CAINDO NO FINAL)
+    <br><br></strong>
 
-  F#m E          D            A
-Quem  é esse que vem, nos abraçando
-  F#m E          D
-Quem  é esse que vem
-             A             E
-Nos constrangendo com o olhar
-           D              E
-Ele é tão sábio ensina em amor
-           D               E
-Ele é tão manso cuida dos corações
+        <strong>
+          [Intro] D  F#m  E  A/C#
+                  D  F#m  E
+        </strong><br><br>
+         <br>
+ <br>
+        <strong>Parte 1 (LEVE) <br></strong>
+         <br>
+               D                      A <br>
+        Quem é esse que vem, nos abraçando <br>
+               D <br>
+        Quem é esse que vem <br>
+                     A             E <br>
+        Nos constrangendo com o olhar <br>
+                   D           E <br>
+        Ele é tão sábio ensina em amor <br>
+                   D               E <br>
+        Ele é tão manso cuida dos corações <br>
+         <br>
+        <strong>PARTE 1 (NORMAL) <br></strong>
+ <br>
+          F#m E          D            A <br>
+        Quem  é esse que vem, nos abraçando <br>
+          F#m E          D <br>
+        Quem  é esse que vem <br>
+                     A             E <br>
+        Nos constrangendo com o olhar <br>
+                   D              E <br>
+        Ele é tão sábio ensina em amor <br>
+                   D               E <br>
+        Ele é tão manso cuida dos corações <br>
+         <br>
+        <strong>PONTE <br></strong>
+         <br>
+                D <br>
+        Ele entrou em casa <br>
+               E <br>
+        Ele está à mesa <br>
+                D/F# <br>
+        Ele nos observa <br>
+                   E/G# <br>
+        Sabe que o esperamos <br>
+         <br>
+        <strong>PRÉ REFRÃO 2X <br></strong>
+         <br>
+                 Bm <br>
+        E ao partir o pão os nossos <br>
+        A/C# <br>
+        Olhos se abrem <br>
+                  D          F#m E <br>
+        E reconhecemos quem Tú és <br>
+                   Bm                A/C# <br>
+        Ao som da Tua voz, os nossos corações <br>
+                     D           F#m  E <br>
+        Queimam de amor, queimam de amor <br>
+         <br>
+         <br>
+        <strong>REFRÃO 2X <br></strong>
+         <br>
+        D                  F#m <br>
+          Nós arrumamos a casa <br>
+        E                 A <br>
+           Perfumamos ela toda <br>
+        D                   F#m <br>
+          Nós preparamos a mesa <br>
+        E           A <br>
+           Tome o lugar de honra <br>
+         <br>
+        <strong>INTRO <br><br></strong>
+        ( D  F#m  E  A/C# ) <br>
+        ( D  F#m  E ) <br>
+         <br>
+        <strong>PONTE <br></strong>
+         <br>
+                D <br>
+        Ele entrou em casa <br>
+               E <br>
+        Ele está à mesa <br>
+                D/F# <br>
+        Ele nos observa <br>
+                   E/G# <br>
+        Sabe que o esperamos <br>
+         <br>
+        <strong>PRÉ REFRÃO 2X <br></strong>
+         <br>
+                 Bm <br>
+        E ao partir o pão os nossos <br>
+        A/C# <br>
+        Olhos se abrem <br>
+                  D            E <br>
+        E reconhecemos quem Tú és <br>
+                   Bm                A/C# <br>
+        Ao som da Tua voz, os nossos corações <br>
+                     D                E <br>
+        Queimam de amor, queimam de amor <br>
+         <br>
+        <strong>REFRÃO 3X <br></strong>
+         <br>
+        D                  F#m <br>
+          Nós arrumamos a casa <br>
+        E                 A/C# <br>
+           Perfumamos ela toda <br>
+        D                   F#m <br>
+          Nós preparamos a mesa <br>
+        E           A <br>
+           Tome o lugar de honra <br>
+ <br>
+         <br>
+        <strong>PRÉ REFRÃO FINAL 3X (CAINDO NA ULTIMA) <br><br></strong>
+                  D          F#m  E <br>
+        E reconhecemos quem Tú és <br>
+                         A/C# <br>
+        Tome o lugar de honra <br>
+                  D          F#m  E <br>
+        E reconhecemos quem Tú és <br>
+                         A/C# <br>
+        Tome o lugar de honra <br>
+        
 
-[Ponte]
+    </code>
+</body>
 
-        D
-Ele entrou em casa
-       E
-Ele está à mesa
-        D/F#
-Ele nos observa
-           E/G#
-Sabe que o esperamos
-
-[Pré-Refrão]
-
-         Bm
-E ao partir o pão os nossos
-A/C#
-Olhos se abrem
-          D          F#m E
-E reconhecemos quem Tú és
-           Bm                A/C#
-Ao som da Tua voz, os nossos corações
-             D           F#m  E
-Queimam de amor, queimam de amor
-
-         Bm
-E ao partir o pão os nossos
-A/C#
-Olhos se abrem
-          D          F#m  E
-E reconhecemos quem Tú és
-           Bm                A/C#
-Ao som da Tua voz, os nossos corações
-             D                E
-Queimam de amor, queimam de amor
-
-[Refrão]
-
-D                  F#m
-  Nós arrumamos a casa
-E                 A
-   Perfumamos ela toda
-D                   F#m
-  Nós preparamos a mesa
-E           A
-   Tome o lugar de honra
-
-D                  F#m
-  Nós arrumamos a casa
-E                 A
-   Perfumamos ela toda
-D                   F#m
-  Nós preparamos a mesa
-E           A
-   Tome o lugar de honra
-
-( D  F#m  E  A/C# )
-( D  F#m  E )
-
-[Ponte]
-
-        D
-Ele entrou em casa
-       E
-Ele está à mesa
-        D/F#
-Ele nos observa
-           E/G#
-Sabe que o esperamos
-
-[Pré-Refrão]
-
-         Bm
-E ao partir o pão os nossos
-A/C#
-Olhos se abrem
-          D            E
-E reconhecemos quem Tú és
-           Bm                A/C#
-Ao som da Tua voz, os nossos corações
-             D                E
-Queimam de amor, queimam de amor
-
-         Bm
-E ao partir o pão os nossos
-A/C#
-Olhos se abrem
-          D            E
-E reconhecemos quem Tú és
-           Bm                A/C#
-Ao som da Tua voz, os nossos corações
-             D                E
-Queimam de amor, queimam de amor
-
-[Refrão]
-
-D                  F#m
-  Nós arrumamos a casa
-E                 A/C#
-   Perfumamos ela toda
-D                   F#m
-  Nós preparamos a mesa
-E           A
-   Tome o lugar de honra
-
-D                  F#m
-  Nós arrumamos a casa
-E                 A
-   Perfumamos ela toda
-D                   F#m
-  Nós preparamos a mesa
-E           A
-   Tome o lugar de honra
-
-          D          F#m  E
-E reconhecemos quem Tú és
-                 A/C#
-Tome o lugar de honra
-          D          F#m  E
-E reconhecemos quem Tú és
-                 A/C#
-Tome o lugar de honra
-
-          D          F#m  E
-E reconhecemos quem Tú és
-                 A/C#
-Tome o lugar de honra
-          D          F#m  E
-E reconhecemos quem Tú és
-                 A/C#  D
-Tome o lugar de honra
+</html>
