--- a/musicas.html
+++ b/musicas.html
@@ -57,7 +57,7 @@
             <a href="./23032024 - SÁBADO/NOSSO DEUS É PODEROSO.html">
                 <li>Nosso Deus é Poderoso (Hillsong) “A”</li>
             </a>
-            <a href="">
+            <a href="./23032024 - SÁBADO/EMAÚS.html">
                 <li>Emaús (Morada) “A”</li>
             </a>
             <a href="">
