--- a/musicas.html
+++ b/musicas.html
@@ -60,10 +60,10 @@
             <a href="./23032024 - SÁBADO/EMAÚS.html">
                 <li>Emaús (Morada) “A”</li>
             </a>
-            <a href="">
+            <a href="./23032024 - SÁBADO/TU ÉS.html">
                 <li>Tu és (Fhop) “D”</li>
             </a>
-            <a href="">
+            <a href="./23032024 - SÁBADO/TU ÉS SOBERANO.html">
                 <li>Tu és soberano(Baruk)“D”</li>
             </a>
         </ul>
