mapa e ajuste web

--- a/23032024 - SÁBADO/TU ÉS.html
+++ b/23032024 - SÁBADO/TU ÉS.html
@@ -19,7 +19,7 @@
 
       <strong>
          MAPA
-         RESUMO ( )
+         RESUMO (INTRO / PARTE 1 / PRÉ REFRÃO / REFRÃO / INTRO / PARTE 1 / PRÉ REFRÃO / REFRÃO 2X / PRÉ REFRÃO 2X / REFRÃO 2X / PARTE 2 2X / REFRÃO FINAL 3X "INVERSÕES" )
      </strong>
      <br><br>
      
