--- a/23032024 - SÁBADO/TU ÉS SOBERANO.html
+++ b/23032024 - SÁBADO/TU ÉS SOBERANO.html
@@ -1,54 +1,86 @@
-TU ÉS SOBERANO - PAULO CESAR BARUK (TOM - D)
+<!DOCTYPE html>
+<html lang="pt-br">
 
+<head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>TU ÉS SOBERANO</title>
+   <style>
+      body {
+         text-align: center;
+      }
+   </style>
+</head>
 
-[Intro] D  A/C#  Bm7  D/F#
-        G  A  D  G  D
+<body>
+   <h1>TU ÉS SOBERANO - PAULO CESAR BARUK (TOM - D)</h1>
+   <a href="../musicas.html">Voltar</a><br><br>
+   <code>
 
-[Primeira Parte]
+      <strong>
+         MAPA
+         RESUMO (INTRO / PARTE 1 / REFRÃO / INTRO / PARTE 2 / REFRÃO FINAL  )
+     </strong>
+     <br><br>
 
- D         A/C#         Bm7
-Tu és soberano sobre a terra
-          Bm/A
-Sobre os céus
-          G9  A    D   G  A/C#
-Tu és Senhor  absoluto
- D         A/C#      Bm7
-Tudo que existe acontece
-    Bm/A       G9
-Tu sabes muito bem
- A         D   G  D
-Tu és tremendo
+      <strong>INTRO <br></strong>
+               D  A/C#  Bm7  D/F# <br>
+              G  A  D  G  D <br>
+       <br>
+      <strong>PARTE 1 <br></strong>
+       <br>
+       D         A/C#         Bm7 <br>
+      Tu és soberano sobre a terra <br>
+                Bm/A <br>
+      Sobre os céus <br>
+                G9  A    D   G  A/C# <br>
+      Tu és Senhor  absoluto <br>
+       D         A/C#      Bm7 <br>
+      Tudo que existe acontece <br>
+          Bm/A       G9 <br>
+      Tu sabes muito bem <br>
+       A         D   G  D <br>
+      Tu és tremendo <br>
+       <br>
+      <strong>REFRÃO <br></strong>
+       <br>
+        Em     G      D <br>
+      E apesar desta glória que tens <br>
+                  Em  G     D          A/C# <br>
+      Tu te importas      comigo também <br>
+        Bm             F#m/A   G        E         A7(4/9) <br>
+      E esse amor tão grande, eleva-me amarra-me à Ti <br>
+                D <br>
+      Tu és tremendo <br>
+       <br>
+      <strong>INTRO <br></strong>
+      ( D  A/C#  Bm7  D/F# ) <br>
+      ( G  A  D  G  D ) <br>
+       <br>
+ <br>
+      <strong>PARTE 2 <br></strong>
+       <br>
+       D         A/C#   F#7(9+)  Bm7 <br>
+      Tudo que existe e acon____tece <br>
+          D/A         G <br>
+      Tu sabes muito bem <br>
+       A        D    G  D <br>
+      Tu és tremendo <br>
+       <br>
+ <br>
+      <strong>REFRÃO FINAL <br></strong>
+       <br>
+        Em     G     D <br>
+      E apesar desta glória que tens <br>
+       Em        G     D          A/C# <br>
+      Tu te importas comigo também <br>
+      Bm                   F#m/A   G        E         A <br>
+          E esse amor tão grande, eleva-me amarra-me à Ti <br>
+                G2   D <br>
+      Tu és tremendo <br>
+ <br>
+               <br>
+    </code>
+</body>
 
-[Refrão]
-
-  Em     G      D
-E apesar desta glória que tens
-            Em  G     D          A/C#
-Tu te importas      comigo também
-  Bm             F#m/A   G        E         A7(4/9)
-E esse amor tão grande, eleva-me amarra-me à Ti
-          D
-Tu és tremendo
-
-( D  A/C#  Bm7  D/F# )
-( G  A  D  G  D )
-
-[Segunda Parte]
-
- D         A/C#   F#7(9+)  Bm7
-Tudo que existe e acon____tece
-    D/A         G
-Tu sabes muito bem
- A        D    G  D
-Tu és tremendo
-
-[Refrão Final]
-
-  Em     G     D
-E apesar desta glória que tens
- Em        G     D          A/C#
-Tu te importas comigo também
-Bm                   F#m/A   G        E         A
-    E esse amor tão grande, eleva-me amarra-me à Ti
-          G2   D
-Tu és tremendo
+</html>
