alteração nosso Deus

--- a/23032024 - SÁBADO/NOSSO DEUS É PODEROSO.html
+++ b/23032024 - SÁBADO/NOSSO DEUS É PODEROSO.html
@@ -23,7 +23,7 @@
           </strong>
           <br><br>
 
-              <strong>[Intro]  A  E  F#m  D 2X</strong><br><br>
+              <strong>[Intro]  A  E  F#m  D  <br> 2X GUITA E 2X BANDA</strong><br><br>
 
               <strong>PARTE 1 </strong><br><br>
 
