--- a/musicas.html
+++ b/musicas.html
@@ -9,46 +9,33 @@
 </head>
 
 <body>
-    <div class="sexta">
-        <a href="https://music.youtube.com/playlist?list=PLmx0sk9jWXEEHgqhkD1W46NL9ynhjAwLe" target="_blank">
-            <h4>22/03/24 Enc de Ministros (Sudré e Berenice)</h4>
+    <div class="VJ_30032024">
+        <a href="https://youtube.com/playlist?list=PLMhEGWy0XV9lX0B77zEk6Zst_qf5br7PX&si=YuCnC7hxtlIivyNw" target="_blank">
+            <h4>VJ - 30/03/2024</h4>
         </a>
         <ul>
-            <a href="">
-                <li>Jesus em tua presença (Morada) “E”</li>
+            <a href="./23032024 - SÁBADO/MARAVILHOSA GRAÇA.html">
+                <li>Maravilhosa Graça (Bethel) “A”</li>
             </a>
-            <a href="">
-                <li>Clamo Jesus (Baruk) “E”</li>
+            <a href="./23032024 - SÁBADO/NOSSO DEUS É PODEROSO.html">
+                <li>Nosso Deus é Poderoso (Hillsong) “A”</li>
             </a>
-            <a href="">
-                <li>Ao único “D”</li>
+            <a href="./23032024 - SÁBADO/EMAÚS.html">
+                <li>Emaús (Morada) “A”</li>
             </a>
-            <a href="">
-                <li>Pode morar aqui (Theo Rubia) “D”</li>
+            <a href="./23032024 - SÁBADO/TU ÉS.html">
+                <li>Tu és (Fhop) “D”</li>
             </a>
-        </ul>
-
-
-        <h5>Momento de ministração e oração:</h5>
-
-
-        <ul>
-            <a href="">
-                <li>Preso a ti (Ton Molinari) “C”</li>
-            </a>
-            <a href="">
-                <li>Eu só quero tua presença / Tua presença é real “G”</li>
-            </a>
-            <a href="">
-                <li>Poderoso Deus “D”</li>
+            <a href="./23032024 - SÁBADO/TU ÉS SOBERANO.html">
+                <li>Tu és soberano(Baruk)“D”</li>
             </a>
         </ul>
-
+        
     </div>
 
-    <div class="sabado">
+    <div class="PASCOA_31032024">
         <a href="https://youtube.com/playlist?list=PLMhEGWy0XV9lX0B77zEk6Zst_qf5br7PX&si=YuCnC7hxtlIivyNw" target="_blank">
-            <h4>23/03/24 Enc de Ministros (Elder e Dri)</h4>
+            <h4>CULTO ESPECIAL DE PÁSCOA - 31/03/2024</h4>
         </a>
         <ul>
             <a href="./23032024 - SÁBADO/MARAVILHOSA GRAÇA.html">
