--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 <body>
     <div id="conteudo">
         <div id="titulo">
-            <h1>Repertório Encontro de Ministros 2024</h1>
+            <h1>Repertório</h1>
         </div>
         
         <div id="pastas">
-            <a href="./musicas.html">LISTA DE MÚSICAS</a>
+            <a href="./vj30032024.html">VJ 30/03/2024</a>
+        </div>
+
+        <div id="pastas">
+            <a href="./pascoa.html">PÁSCOA 31/03/2024</a>
         </div>
 
 
