link paginas principais

--- a/pascoa.html
+++ b/pascoa.html
@@ -16,34 +16,34 @@
         </a>
         <ul>
             <p>Preludio:</p>
-            <a href="">
+            <a href="./31032024 - CULTO PÁSCOA/isaias_53.html">
                 <li>Isaías 53 (Projeto Sola) “?”</li>
             </a>
             <br>
             <p>Louvor:</p>
-            <a href="">
+            <a href="./31032024 - CULTO PÁSCOA/porque_ele_vive.html">
                 <li>Porque Ele vive (Vineyard) “G”</li>
             </a>
-            <a href="">
+            <a href="./31032024 - CULTO PÁSCOA/unico.html">
                 <li>Único (FHOP) “A”</li>
             </a>
-            <a href="">
+            <a href="./31032024 - CULTO PÁSCOA/pra_sempre.html">
                 <li>Pra sempre (Kari Jobe) “A”</li>
             </a>
-            <a href="">
+            <a href="./31032024 - CULTO PÁSCOA/elo_perfeito.html">
                 <li>Elo Perfeito (HRAIZ) “E”</li>
             </a>
             <br>
             <p>Ceia:</p>
-            <a href="">
+            <a href="./31032024 - CULTO PÁSCOA/fez_caminho.html">
                 <li>Fez um caminho (Livres) “C”</li>
             </a>
             <br>
             <p>Crianças:</p>
-            <a href="">
+            <a href="./31032024 - CULTO PÁSCOA/vim_para_adorar_crianca.html">
                 <li>Vim para adorar-te (Jonas Pimentel) “G”</li>
             </a>
-            <a href="">
+            <a href="./31032024 - CULTO PÁSCOA/porque_ele_vive_crianca.html">
                 <li>Porque Ele vive (Ovelhinha Dara) “A#”</li>
             </a>
 
