--- a/vj30032024.html
+++ b/vj30032024.html
@@ -14,19 +14,19 @@
             <h4>VJ - 30/03/2024</h4>
         </a>
         <ul>
-            <a href="">
+            <a href="./30032024 - VJ/teu_amor_nao_falha.html">
                 <li>Teu Amor não falha (Nívea Soares) “?”</li>
             </a>
-            <a href="">
+            <a href="./30032024 - VJ/abra_os_olhos.html">
                 <li>Abra os olhos do meu coração (David Quinlan) “?”</li>
             </a>
-            <a href="">
+            <a href="./30032024 - VJ/porque_ele_vive.html">
                 <li>Porque Ele vive (Victor Valente) “?”</li>
             </a>
-            <a href="">
+            <a href="./30032024 - VJ/pra_te_adorar.html">
                 <li>Pra te adorar eu vivo (Laura Souguellis) “?”</li>
             </a>
-            <a href="">
+            <a href="./30032024 - VJ/fogo_em_teus_olhos.html">
                 <li>Fogo em teus olhos (Louvor IIR) “?”</li>
             </a>
         </ul>
