--- a/pascoa.html
+++ b/pascoa.html
@@ -21,8 +21,8 @@
             </a>
             <br>
             <p>Louvor:</p>
-            <a href="./31032024 - CULTO PÁSCOA/porque_ele_vive.html">
-                <li>Porque Ele vive (Vineyard) “G”</li>
+            <a href="./31032024 - CULTO PÁSCOA/rude_cruz.html">
+                <li>Rude Cruz (Vineyard) “A”</li>
             </a>
             <a href="./31032024 - CULTO PÁSCOA/unico.html">
                 <li>Único (FHOP) “A”</li>
