--- a/pascoa.html
+++ b/pascoa.html
@@ -17,7 +17,7 @@
         <ul>
             <p>Preludio:</p>
             <a href="./31032024 - CULTO PÁSCOA/isaias_53.html">
-                <li>Isaías 53 (Projeto Sola) “?”</li>
+                <li>Isaías 53 (Projeto Sola) “D”</li>
             </a>
             <br>
             <p>Louvor:</p>
