UDPATE RUDE CRUZ

--- a/31032024 - CULTO PÁSCOA/rude_cruz.html
+++ b/31032024 - CULTO PÁSCOA/rude_cruz.html
@@ -18,7 +18,7 @@
 
       <strong>
          MAPA
-         RESUMO ( )
+         RESUMO (??? )
      </strong>
      <br><br>
      
@@ -74,7 +74,7 @@
  <br>
      <strong>PONTE  <br></strong>
  <br>
-     A               A7        D         <br>
+     A               A7        D/F#         <br>
      Nesta cruz padeceu e por mim já morreu <br>
             E7                    A   <br>
      Meu Jesus, para dar-me o perdão <br>
@@ -92,7 +92,7 @@
      Até morrer eu a vou proclamar <br>
           A        A7M          D/F#  Dm7/F <br>
      Levarei eu também minha cruz <br>
-             A      D/E      A <br>
+             A      D/E      G <br>
      Té por uma coroa trocar <br>
  <br>
      <strong>FINAL (G - A) 2X (SUBIR E FINALIZAR NA ULTIMA) <br></strong>
