UPDATE PRA SEMPRE

--- a/31032024 - CULTO PÁSCOA/pra_sempre.html
+++ b/31032024 - CULTO PÁSCOA/pra_sempre.html
@@ -22,7 +22,7 @@
    </strong>
    <br><br>
 
-   <strong>INTRO LEVE (A E Bm D) 2X <br></strong>
+   <strong>INTRO LEVE PIANO (A E Bm D) 2X <br></strong>
  <br>
    <strong>PARTE 1 <br></strong>
  <br>
@@ -60,7 +60,7 @@
    O sepulcro se abriu <br>
    D <br>
    E nada vencerá seu grande amor <br>
-   A E <br>
+   C# E <br>
    Ó morte, onde estás? <br>
    F#m <br>
    O Rei ressuscitou! <br>
@@ -86,7 +86,7 @@
    O sepulcro se abriu <br>
    D <br>
    E nada vencerá seu grande amor <br>
-   A E <br>
+   C# E <br>
    Ó morte, onde estás? <br>
    F#m <br>
    O Rei ressuscitou! <br>
