UPDATE ELO PERFEITO

--- a/31032024 - CULTO PÁSCOA/elo_perfeito.html
+++ b/31032024 - CULTO PÁSCOA/elo_perfeito.html
@@ -21,9 +21,9 @@
    </strong>
    <br><br>
  <br>
-   <strong>INTRO (E - A) <br></strong>
+   <strong>INTRO LEVE PIANO (E - A) <br></strong>
  <br>
-   <strong>PARTE 1 LEVE <br></strong>
+   <strong>PARTE 1 LEVE PIANO E VOZES <br></strong>
  <br>
    E A <br>
    Tão perfeito é o teu amor <br>
@@ -66,7 +66,7 @@
  <br>
    F#m <br>
    Eu te amo Deus <br>
-   B <br>
+   D# - C#m - B - A - G#m - F#m - A  <br>
    Minha vida é tua <br>
  <br>
    <strong>PÓS REFRÃO 2X <br></strong>
@@ -82,20 +82,20 @@
    Amar é conhecer a Deus <br>
    Conhecer a Deus.... <br>
  <br>
-   <strong>SOLO GUITARRA (A - G# - F# - G# || A - G# - F# - "FRASE" ) <br></strong>
+   <strong>SOLO GUITARRA (A - G# - F# - G# || A - G# - F# - {frase E - F#m - G#m - Bm - A} ) <br></strong>
  <br>
    <strong>PONTE LEVE <br></strong>
  <br>
-   A B <br>
+   A Bm <br>
    Amar é conhecer a Deus <br>
-   C#m A <br>
+   C#m F#m G#m <br>
    Abrir mão do meu eu entrelaçar-me em ti <br>
-   C#m B/D# G#m <br>
+   C#m  <br>
    Amar é decidir ser um com os três sermos um <br>
-   A <br>
+    <br>
    Elo perfeito <br>
     <br>
-   <strong>FINAL () <br></strong>
+   <strong>FINAL PIANO (E - A) <br></strong>
  <br>
 </body>
 
