update fez caminho

--- a/31032024 - CULTO PÁSCOA/fez_caminho.html
+++ b/31032024 - CULTO PÁSCOA/fez_caminho.html
@@ -79,9 +79,9 @@
      C/E                   F <br>
        Para liberdade, me libertou <br>
       <br>
-     Me Liberou ( C9 F/C C9 F/C C9 F/C ) <br>
+     Me Libertou ( C9 F/C C9 F/C C9 F/C ) 4x<br>
       <br>
-   <strong>PONTE  <br></strong>
+   <strong>PONTE  (CRESCENDO)<br></strong>
  <br>
      C9          F/C <br>
        Fez um caminho pra mim <br>
@@ -90,34 +90,30 @@
      C9          F/C <br>
        Fez um caminho pra mim <br>
      C9                 F/C    C9 <br>
-       Por onde eu não poderia ir <br>
+       Por onde eu não poderia ir (breve pausa)<br>
       <br>
    <strong>REFRÃO <br></strong>
              C <br>
      Eu sou Teu <br>
-            F <br>
+            Am <br>
      Tu és meu <br>
-          C     G           F <br>
+               G           F <br>
      E seremos juntos, pra sempre <br>
              C <br>
      Eu sou Teu <br>
-            F <br>
+            Am <br>
      Tu és meu <br>
-          C                 F <br>
+          G                 F <br>
      E seremos juntos, pra sempre <br>
       <br>
-     ( C9 Am7(11) G4 F ) <br>
-     ( C9 Am7(11) G4 F ) <br>
-     ( C9 Am7(11) G4 F ) <br>
-     ( C9 Am7(11) G4 F ) <br>
-     ( C9 Am7(11) G4 F ) <br>
+     Juntos, Juntos, Juntos para Sempre ( C9 Am7(11))<br>
+     Juntos, Juntos, Juntos para Sempre ( G4 F )
+     <br>
       <br>
-     <strong>1/2 PONTE  <br></strong>
-      <br>
+     <strong>1/2 PONTE MINISTRAÇÃO REPETE OPCIONAL <br></strong>
+      <br>  
      C           F/C <br>
        Fez um caminho  pra mim <br>
-     C                  F      C <br>
-       Por onde eu não poderia ir <br>
  <br>
 </body>
 
