update vj lista

--- a/vj30032024.html
+++ b/vj30032024.html
@@ -15,19 +15,19 @@
         </a>
         <ul>
             <a href="./30032024 - VJ/teu_amor_nao_falha.html">
-                <li>Teu Amor não falha (Nívea Soares) “?”</li>
+                <li>Teu Amor não falha (Nívea Soares) “C”</li>
             </a>
             <a href="./30032024 - VJ/abra_os_olhos.html">
-                <li>Abra os olhos do meu coração (David Quinlan) “?”</li>
+                <li>Abra os olhos do meu coração (David Quinlan) “E”</li>
             </a>
             <a href="./30032024 - VJ/porque_ele_vive.html">
-                <li>Porque Ele vive (Victor Valente) “?”</li>
+                <li>Porque Ele vive (Victor Valente) “A”</li>
             </a>
             <a href="./30032024 - VJ/pra_te_adorar.html">
-                <li>Pra te adorar eu vivo (Laura Souguellis) “?”</li>
+                <li>Pra te adorar eu vivo (Laura Souguellis) “E”</li>
             </a>
             <a href="./30032024 - VJ/fogo_em_teus_olhos.html">
-                <li>Fogo em teus olhos (Louvor IIR) “?”</li>
+                <li>Fogo em teus olhos (Louvor IIR) “Em”</li>
             </a>
         </ul>
         
