--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="conteudo">
+        <img class= 'img01' src="./01.jpg" alt="imagem1">
         <div id="titulo">
             <h1>Repertório</h1>
         </div>
